# rust_seaorm_demo

./: .gitignore  Cargo.toml
entity/: Cargo.toml
entity/src/: lib.rs  post.rs  prelude.rs
migration/src/: m20220101_000001_create_table.rs
src/: lib.rs
