[package]
name = "seaorm_demo"
version = "0.1.0"
edition = "2024"

[workspace]
members = [".", "entity", "migration"]

[dependencies]
sea-orm = { version = "1.1.3", default-features = false, features = [
    "sqlx-sqlite",
    "macros",
    "runtime-tokio-rustls",
] }
tokio = { version = "1.42.0", features = ["macros", "rt-multi-thread"] }
entity = { path = "entity" }
migration = { path = "migration" }
dotenv = "0.15.0"
